Downgrade spring-boot module to java 8 and spring-boot 2.7.x (#10)
This allows using the module with older spring-boot applications while preserving forward-compatibility with spring-boot 3.

NB: `spring-boot-admin` module still requires spring-boot 3 and higher.