@@ -2,8 +2,11 @@ package me.genuss.jklee;
 
 import java.time.Duration;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import lombok.Builder;
 import lombok.Value;
 import me.genuss.jklee.Jklee.ProfilingRequest;
@@ -25,10 +28,17 @@ public class JkleeProfileEndpoint {
 
   @ReadOperation
   public ProfilingOptions profilingOptions() {
-    var formats =
+    List<Map<String, String>> formats =
         Arrays.stream(Format.values())
-            .map(format -> Map.of("label", format.name().toLowerCase(), "value", format.name()));
-    return ProfilingOptions.builder().formats(formats.toList()).build();
+            .map(
+                format -> {
+                  Map<String, String> map = new HashMap<>();
+                  map.put("label", format.name().toLowerCase());
+                  map.put("value", format.name());
+                  return Collections.unmodifiableMap(map);
+                })
+            .collect(Collectors.toList());
+    return ProfilingOptions.builder().formats(formats).build();
   }
 
   @WriteOperation
